# whaleDoc

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/java/com/example/myapplication/: Hook.java  MainActivity.java
app/src/main/java/com/example/myapplication/utils/: CLogUtils.java
app/src/main/java/com/lody/whale/: WhaleRuntime.java
app/src/main/java/com/lody/whale/xposed/: XposedBridge.java
app/src/main/res/layout/: activity_main.xml
app/src/main/whale/src/: whale.cc
app/src/main/whale/src/android/: android_build.h  jni_helper.h
app/src/main/whale/src/android/art/: art_hook_param.h  art_jni_trampoline.cc  art_method.cc  art_method.h  art_runtime.cc  art_runtime.h  art_symbol_resolver.cc  art_symbol_resolver.h  native_on_load.cc
app/src/main/whale/src/base/: cxx_helper.h
app/src/main/whale/src/platform/linux/: process_map.cc
app/src/main/whale/test/: test_hook.cc
gradle/wrapper/: gradle-wrapper.properties
